grub2 (2.02+dfsg1-20+deb10u3) UNRELEASED; urgency=high

  * When upgrading grub-pc noninteractively, bail out if grub-install fails.
    It's better to fail the upgrade than to produce a possibly-unbootable
    system.

 -- Colin Watson <cjwatson@debian.org>  Sun, 16 Aug 2020 12:55:51 +0100

grub2 (2.02+dfsg1-20+deb10u2) buster-security; urgency=high

  * Fix a regression caused by "efi: fix some malformed device path
    arithmetic errors" (thanks, Chris Coulson and Steve McIntyre; closes:
    #966554).

 -- Colin Watson <cjwatson@debian.org>  Thu, 30 Jul 2020 20:19:53 +0100

grub2 (2.02+dfsg1-20+deb10u1) buster-security; urgency=high

  * Backport security patch series from upstream:
    - CVE-2020-10713: yylex: Make lexer fatal errors actually be fatal
    - safemath: Add some arithmetic primitives that check for overflow
    - calloc: Make sure we always have an overflow-checking calloc()
      available
    - CVE-2020-14308: calloc: Use calloc() at most places
    - CVE-2020-14309, CVE-2020-14310, CVE-2020-14311: malloc: Use overflow
      checking primitives where we do complex allocations
    - iso9660: Don't leak memory on realloc() failures
    - font: Do not load more than one NAME section
    - gfxmenu: Fix double free in load_image()
    - xnu: Fix double free in grub_xnu_devprop_add_property()
    - lzma: Make sure we don't dereference past array
    - term: Fix overflow on user inputs
    - udf: Fix memory leak
    - tftp: Do not use priority queue
    - relocator: Protect grub_relocator_alloc_chunk_addr() input args
      against integer underflow/overflow
    - relocator: Protect grub_relocator_alloc_chunk_align() max_addr against
      integer underflow
    - script: Remove unused fields from grub_script_function struct
    - CVE-2020-15706: script: Avoid a use-after-free when redefining a
      function during execution
    - relocator: Fix grub_relocator_alloc_chunk_align() top memory
      allocation
    - hfsplus: fix two more overflows