@@ -3,6 +3,10 @@ grub2 (2.02+dfsg1-20+deb10u3) UNRELEASED; urgency=high
   * When upgrading grub-pc noninteractively, bail out if grub-install fails.
     It's better to fail the upgrade than to produce a possibly-unbootable
     system.
+  * Explicitly check whether the target device exists before running
+    grub-install, since grub-install copies modules to /boot/grub/ before
+    installing the core image, and the new modules might be incompatible
+    with the old core image (closes: #966575).
 
  -- Colin Watson <cjwatson@debian.org>  Sun, 16 Aug 2020 12:55:51 +0100
 
